# StartUpIdea_AI

./: .env.example  .gitignore  README.md  pyproject.toml
src/: main.py  tasks.py
src/agents/: business_strategist.py  competitor_analyst.py  final_decision.py  market_researcher.py  risk_analyst.py
src/tools/: rag_tool.py
